sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:5: error: '(' expected but identifier found.
      if getValue(i)>getValue(i+2){
         ^AlgBubbleSort2:8: error: illegal start of simple expression
    }
    ^